--- a/part1/readFileOverHTTP/package.json
+++ b/part1/readFileOverHTTP/package.json
@@ -6,5 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Poofix"
+  "author": "Poofix",
+  "license": "ISC",
+  "dependencies": {
+    "line-reader": "^0.4.0",
+    "pug": "^2.0.4"
+  }
 }
